Refactor category rerieval